--- a/app/views/messages/index.haml
+++ b/app/views/messages/index.haml
@@ -22,7 +22,7 @@
     .main__footer
       .main__footer--form
         / = form_for [@group, @message], html: {class: 'from__message'} do |f|
-        = form_for "#", html: {class: 'from__message'} do |f|
+        = form_for "#", html: {class: 'from__message',id: 'new_message'} do |f|
           = f.text_field :text, placeholder: "type a message"
           = f.label :image do
             = fa_icon "image", id: 'upload-icon'
