--- a/app/views/messages/_side-body.haml
+++ b/app/views/messages/_side-body.haml
@@ -1,14 +1,12 @@
 .side
   .side__header
     %h1.side__header--name
-      username
-      / = current_user.nickname
+      = current_user.nickname
     .side__header--icon
       / = link_to new_group_path do
       = link_to "#" do
         = fa_icon "pencil-square-o", class: 'btn'
-      / = link_to edit_user_path(current_user) do
-      = link_to "#" do
+      = link_to edit_user_path(current_user) do
         = fa_icon "gear", class: 'btn'
   .side__body
     .side__body--group
