--- a/app/views/messages/_side-body.haml
+++ b/app/views/messages/_side-body.haml
@@ -3,8 +3,7 @@
     %h1.side__header--name
       = current_user.nickname
     .side__header--icon
-      / = link_to new_group_path do
-      = link_to "#" do
+      = link_to new_group_path do
         = fa_icon "pencil-square-o", class: 'btn'
       = link_to edit_user_path(current_user) do
         = fa_icon "gear", class: 'btn'
